--- a/godot_liam_game/.godot/editor/editor_layout.cfg
+++ b/godot_liam_game/.godot/editor/editor_layout.cfg
@@ -32,20 +32,20 @@ open_scenes=PackedStringArray("res://Main.tscn")
 current_scene="res://Main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(588, 68)
-size=Vector2i(3024, 1896)
+mode="maximized"
+position=Vector2i(0, 0)
+size=Vector2i(1920, 1140)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://README.txt"]
+selected_script="res://README.txt"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
