--- a/godot_liam_game/.godot/editor/editor_layout.cfg
+++ b/godot_liam_game/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,19 +28,19 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Main.tscn")
-current_scene="res://Main.tscn"
+open_scenes=PackedStringArray("res://main.tscn")
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="windowed"
-position=Vector2i(588, 68)
-size=Vector2i(3024, 1896)
+position=Vector2i(974, 68)
+size=Vector2i(2050, 1896)
 
 [ScriptEditor]
 
@@ -53,7 +53,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(924, 612, 1399, 740)
+floating_window_rect=Rect2i(924, 612, 1399, 741)
 floating_window_screen=0
 
 [ShaderEditor]
@@ -62,3 +62,13 @@ open_shaders=[]
 split_offset=400
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=false
+log_filter_2=false
+log_filter_1=true
+log_filter_3=false
+log_filter_4=false
+collapse=false
+show_search=true
