--- a/godot_liam_game/.godot/editor/editor_layout.cfg
+++ b/godot_liam_game/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/road.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -32,30 +32,19 @@ open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-<<<<<<< HEAD
+<<<<<<<HEADselected_main_editor_idx=0
 selected_main_editor_idx=0
-=======
-selected_main_editor_idx=2
->>>>>>> 0d08bf251c5a1548448987b9108f0f54104add09
-selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-<<<<<<< HEAD
-mode="windowed"
-position=Vector2i(974, 68)
-size=Vector2i(2050, 1896)
-=======
-mode="maximized"
-position=Vector2i(0, 0)
-size=Vector2i(1920, 1140)
->>>>>>> 0d08bf251c5a1548448987b9108f0f54104add09
+mode="fullscreen"
+position=Vector2i(0, 66)
 
 [ScriptEditor]
 
-open_scripts=["res://README.txt"]
-selected_script="res://README.txt"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=400
 list_split_offset=0
@@ -72,13 +61,3 @@ open_shaders=[]
 split_offset=400
 selected_shader=""
 text_shader_zoom_factor=1.0
-
-[editor_log]
-
-log_filter_0=false
-log_filter_2=false
-log_filter_1=true
-log_filter_3=false
-log_filter_4=false
-collapse=false
-show_search=true
