--- a/godot_liam_game/.godot/editor/editor_layout.cfg
+++ b/godot_liam_game/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/road.png")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/pixilart-drawing (3) (1).png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -34,17 +34,18 @@ center_split_offset=0
 selected_default_debugger_tab_idx=0
 <<<<<<<HEADselected_main_editor_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=13
 
 [EditorWindow]
 
 screen=0
-mode="fullscreen"
-position=Vector2i(0, 66)
+mode="maximized"
+position=Vector2i(0, 29)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://character_body_2d.gd"]
+selected_script="res://character_body_2d.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
@@ -52,7 +53,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(924, 612, 1399, 741)
+floating_window_rect=Rect2i(378, 205, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
